--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["react", "es2015", "stage-0"]
+  "presets": ["react", "es2015", "stage-0"],
+  "plugins": [
+    ["transform-class-properties"],
+    ["transform-es2015-classes", {"loose": true}]
+  ]
 }
