--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "decorate-component-with-props": "^1.0.2",
     "find-with-regex": "^1.0.2",
     "union-class-names": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-es2015-classes": "^6.9.0"
   }
 }
